--- a/department-service/k8s/deployment.yaml
+++ b/department-service/k8s/deployment.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: department
-        image: piomin/department:1.0
+        image: ruchi672/departmentmicroservice:latest
         ports:
         - containerPort: 8080
         env:
